Added CheckForUpdateEvent to supress There is no update available. dialog box.

--- a/src/GameHook.WPF/GameHook.WPF.csproj
+++ b/src/GameHook.WPF/GameHook.WPF.csproj
@@ -16,6 +16,7 @@
 		<EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
 		<ApplicationIcon>icon.ico</ApplicationIcon>
 		<UseWPF>true</UseWPF>
+		<UseWindowsForms>true</UseWindowsForms>
 	</PropertyGroup>
 
 	<ItemGroup>
