Added a deploy step for just a GameHook.exe that can be linked to via the website.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -72,6 +72,7 @@ jobs:
           files: |
             ./GameHook-*.zip
             ./GameHook-*.tar.gz
+            ./deploy/GameHook.exe
   notify:
     name: Notify Users
     runs-on: ubuntu-latest
