Corrected Linux .tar.gz directory issue.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -63,7 +63,7 @@ jobs:
             chmod +x ./deploy/GameHook.WebAPI
             cp ./deploy/GameHook.WebAPI ./deploy/GameHook
 
-            tar czvf "${release_name}.tar.gz" ./deploy/GameHook/
+            cd ./deploy/ && tar czvf "./../${release_name}.tar.gz" GameHook && cd -
           fi
 
       - name: Release
