--- a/src/GameHook.WPF/GameHook.WPF.csproj
+++ b/src/GameHook.WPF/GameHook.WPF.csproj
@@ -30,6 +30,7 @@
 	<ItemGroup>
 		<PackageReference Include="Autoupdater.NET.Official" Version="1.7.0" />
 		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1150.38" />
+		<PackageReference Include="Serilog.Sinks.RichTextBox.Wpf" Version="1.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
