Updates to naming conventions.

--- a/src/GameHook.WPF/GameHook.WPF.csproj
+++ b/src/GameHook.WPF/GameHook.WPF.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<Version>0.0.0+dev</Version>
+		<Product>GameHook</Product>
 		<ProductVersion>0.0.0+dev</ProductVersion>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 		<TargetFramework>net6.0-windows</TargetFramework>
