Updated resource files.

--- a/src/GameHook.WebAPI/GameHook.WebAPI.csproj
+++ b/src/GameHook.WebAPI/GameHook.WebAPI.csproj
@@ -20,6 +20,7 @@
 	<ItemGroup>
 		<Content Remove="appsettings.json" />
 		<Content Remove="wwwroot\dist\gameHookMapperClient.js" />
+		<Content Remove="wwwroot\favicon.ico" />
 		<Content Remove="wwwroot\index.html" />
 		<Content Remove="wwwroot\site.css" />
 	</ItemGroup>
@@ -27,6 +28,7 @@
 	<ItemGroup>
 		<EmbeddedResource Include="appsettings.json" />
 		<EmbeddedResource Include="wwwroot\dist\gameHookMapperClient.js" />
+		<EmbeddedResource Include="wwwroot\favicon.ico" />
 		<EmbeddedResource Include="wwwroot\index.html" />
 		<EmbeddedResource Include="wwwroot\site.css" />
 	</ItemGroup>
