--- a/src/GameHook.WebAPI/appsettings.json
+++ b/src/GameHook.WebAPI/appsettings.json
@@ -9,7 +9,7 @@
   "Urls": "http://localhost:8085",
   "AllowedHosts": "*",
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console" ],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -23,6 +23,14 @@
       {
         "Name": "Console",
         "Args": {
+          "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "gamehook.log",
+          "fileSizeLimitBytes": 16000000,
           "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}"
         }
       }
