Only show warning cannot access memory addresses once on first run of mapper.  Began implementing FromValue() Added Mapster.

--- a/src/GameHook.WebAPI/GameHook.WebAPI.csproj
+++ b/src/GameHook.WebAPI/GameHook.WebAPI.csproj
@@ -40,6 +40,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.4.0" />
+		<PackageReference Include="Mapster" Version="7.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
