--- a/src/GameHook.WebAPI/appsettings.json
+++ b/src/GameHook.WebAPI/appsettings.json
@@ -6,6 +6,8 @@
   "AUTOMATIC_MAPPER_UPDATES": true,
   "CHECK_FOR_MAPPER_UPDATES_MINUTES": 1440,
 
+  "OUTPUT_PROPERTY_VALUES_TO_FILESYSTEM": false,
+
   "Urls": "http://localhost:8085",
   "AllowedHosts": "*",
   "Serilog": {
