--- a/src/GameHook.Application/GameHook.Application.csproj
+++ b/src/GameHook.Application/GameHook.Application.csproj
@@ -2,8 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+	<EnablePreviewFeatures>true</EnablePreviewFeatures>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GameHook.Domain\GameHook.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
