--- a/src/GameHook.WebAPI/GameHook.WebAPI.csproj
+++ b/src/GameHook.WebAPI/GameHook.WebAPI.csproj
@@ -6,6 +6,7 @@
 		<ProductVersion>0.0.0.0+dev</ProductVersion>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 		<TargetFramework>net6.0</TargetFramework>
+		<EnablePreviewFeatures>true</EnablePreviewFeatures>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
@@ -48,6 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\GameHook.Application\GameHook.Application.csproj" />
 		<ProjectReference Include="..\GameHook.Domain\GameHook.Domain.csproj" />
 	</ItemGroup>
 
