--- a/src/GameHook.WebAPI/appsettings.json
+++ b/src/GameHook.WebAPI/appsettings.json
@@ -1,43 +1,45 @@
 {
-  "DRIVER_LISTEN_IP_ADDRESS": "127.0.0.1",
-  "DRIVER_LISTEN_PORT": "55355",
-  "DRIVER_TIMEOUT_COUNTER": 10,
+    "DRIVER_LISTEN_IP_ADDRESS": "127.0.0.1",
+    "DRIVER_LISTEN_PORT": "55355",
+    "DRIVER_TIMEOUT_COUNTER": 10,
 
-  "AUTOMATIC_MAPPER_UPDATES": true,
-  "CHECK_FOR_MAPPER_UPDATES_MINUTES": 1440,
+    "OUTPUT_ALL_PROPERTIES_TO_FILESYSTEM": false,
 
-  "Urls": "http://localhost:8085",
-  "AllowedHosts": "*",
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "GameHook": "Information",
-        "Microsoft": "Warning",
-        "Serilog.AspNetCore.RequestLoggingMiddleware": "Warning",
-        "System.Net.Http.HttpClient": "Warning"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}"
+    "AUTOMATIC_MAPPER_UPDATES": true,
+    "CHECK_FOR_MAPPER_UPDATES_MINUTES": 1440,
+
+    "Urls": "http://localhost:8085",
+    "AllowedHosts": "*",
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "GameHook": "Information",
+                "Microsoft": "Warning",
+                "Serilog.AspNetCore.RequestLoggingMiddleware": "Warning",
+                "System.Net.Http.HttpClient": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console",
+                "Args": {
+                    "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}"
+                }
+            },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "gamehook.log",
+                    "fileSizeLimitBytes": 16000000,
+                    "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}"
+                }
+            }
+        ],
+        "Enrich": [ "FromLogContext" ],
+        "Properties": {
+            "Application": "GameHook"
         }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "gamehook.log",
-          "fileSizeLimitBytes": 16000000,
-          "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}"
-        }
-      }
-    ],
-    "Enrich": [ "FromLogContext" ],
-    "Properties": {
-      "Application": "GameHook"
     }
-  }
 }
