--- a/src/GameHook.IntegrationTests/GameHook.IntegrationTests.csproj
+++ b/src/GameHook.IntegrationTests/GameHook.IntegrationTests.csproj
@@ -10,12 +10,20 @@
 
 	<ItemGroup>
 		<None Remove="Data\005fdd01-8921-468c-aca3-d4fa864d5911-1.json" />
+		<None Remove="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-1.json" />
+		<None Remove="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-2.json" />
 		<None Remove="OpenAPI\swagger.json" />
 		<None Remove="testsettings.json" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Content Include="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-0.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
 	  <Content Include="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-1.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-2.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
 	  <Content Include="testsettings.json">
