Updating workflow os targets.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,17 +10,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        kind: ['linux', 'windows', 'osx-x64']
+        kind: ['linux', 'windows', 'osx-x64', 'osx-arm64']
         include:
           - kind: linux
-            os: ubuntu-latest
+            os: ['linux', 'x64']
             target: linux-x64
           - kind: windows
-            os: windows-latest
+            os: ['windows', 'x64']
             target: win-x64
           - kind: osx-x64
-            os: macos-latest
+            os: ['macOS', 'x64']
             target: osx-x64
+          - kind: osx-arm64
+            os: ['macOS', 'ARM64']
+            target: osx-arm64
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
