--- a/src/GameHook.IntegrationTests/GameHook.IntegrationTests.csproj
+++ b/src/GameHook.IntegrationTests/GameHook.IntegrationTests.csproj
@@ -12,6 +12,7 @@
 		<None Remove="Data\005fdd01-8921-468c-aca3-d4fa864d5911-1.json" />
 		<None Remove="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-1.json" />
 		<None Remove="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-2.json" />
+		<None Remove="Data\MemoryAddressBlocks\b2b7d2d6-5cf0-4db1-9152-1efc7fe36926-0.json" />
 		<None Remove="OpenAPI\swagger.json" />
 		<None Remove="testsettings.json" />
 	</ItemGroup>
@@ -24,6 +25,9 @@
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
 	  <Content Include="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-2.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="Data\MemoryAddressBlocks\b2b7d2d6-5cf0-4db1-9152-1efc7fe36926-0.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
 	  <Content Include="testsettings.json">
