Major Refactoring of Internal Properties / Mapper / Added scripting support (#59)
* WIP. Made Length a nullable property.

* Updated Mappers project casing.

* Remove unused interface elements.

* Made more properties private.
* Updated BizHawk.csproj, added gitignore file to Mappers.

* Updated .gitignore.

* Remove unused projects.

* Updated tests. Updated memory containers.

* Made updates to mapper filesystem provider to implement ALTERNATIVE_MAPPER_DIRECTORY.

* Updated tests.

* Added additional tests. Changed the way filesystem IDs are generated to be less obscured.

* Added js hooks.

* Updated documentation.

* Updated docs.

* Remove unused yaml preprocessor data_block_fa7545e6. Updated MemoryContainerDumping. Added nds_pokemon_platinum_0.json.

* integration tests for Pokemon platinum (#56)

wrote tests for the Torterra save just infront of Fantina
- tests properties within each encrypted region
- tests interger properties
- tests unencrypted data
- tests bits
- tests references
- tests global pointer and properties that are offset using it

-tests still need to be written for string properties once that data type is correctly being calculated by gamehook

* Updated memory container functions.

* Updated StringProperty to add a new Size field for reading string values with a size greater than 1. Updated get_be / get_le functions to automatically pad a byte array. Updated tests.

* Added back expressions. Updated tests.

* Update read-property.md

* Update read-property.md

* Removed XmlJsHooks.

* Fixed the bit property writing incorrect values.

* Update ByteExtensions.cs (#57) fixed for get_uint_be from Waiel

* WIP. Changed names of byte get functions.

* Updated test name.

* Fixed a bug when ALTERNATIVE_MAPPER_DIRECTORY was not defined.

* Update PokemonPlatinum.cs (#58)

Fixed the two tests that were failing
- Address was wrong for the first test (global_pointer)
- Value was wrong f

--- a/src/GameHook.IntegrationTests/GameHook.IntegrationTests.csproj
+++ b/src/GameHook.IntegrationTests/GameHook.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -9,34 +9,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Remove="Data\005fdd01-8921-468c-aca3-d4fa864d5911-1.json" />
-		<None Remove="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-1.json" />
-		<None Remove="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-2.json" />
-		<None Remove="Data\MemoryAddressBlocks\b2b7d2d6-5cf0-4db1-9152-1efc7fe36926-0.json" />
-		<None Remove="OpenAPI\swagger.json" />
-		<None Remove="testsettings.json" />
+		<Content Include="testsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Content Include="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-0.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-1.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="Data\MemoryAddressBlocks\005fdd01-8921-468c-aca3-d4fa864d5911-2.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="Data\MemoryAddressBlocks\b2b7d2d6-5cf0-4db1-9152-1efc7fe36926-0.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="testsettings.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	</ItemGroup>
-
-	<ItemGroup>
-		<OpenApiReference Include="OpenAPI\swagger.json" CodeGenerator="NSwagCSharp" Namespace="OpenAPI.GameHook" ClassName="GameHookClient" />
+		<OpenApiReference Include="../swagger.json" CodeGenerator="NSwagCSharp" Namespace="OpenAPI.GameHook" ClassName="GameHookClient" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -61,5 +40,4 @@
 		<ProjectReference Include="..\GameHook.Domain\GameHook.Domain.csproj" />
 		<ProjectReference Include="..\GameHook.WebAPI\GameHook.WebAPI.csproj" />
 	</ItemGroup>
-
 </Project>
