--- a/src/GameHook.WebAPI/appsettings.json
+++ b/src/GameHook.WebAPI/appsettings.json
@@ -3,15 +3,17 @@
   "DRIVER_LISTEN_PORT": "55355",
   "DRIVER_TIMEOUT_COUNTER": 10,
 
+  "SHOW_READ_LOOP_STATISTICS": false,
+
   "OUTPUT_ALL_PROPERTIES_TO_FILESYSTEM": false,
 
   "AUTOMATIC_MAPPER_UPDATES": true,
   "CHECK_FOR_MAPPER_UPDATES_MINUTES": 1,
-
-  "OUTPUT_TRANSFORMED_MAPPER": false,
+  "ALTERNATIVE_MAPPER_DIRECTORY": null,
 
   "Urls": "http://localhost:8085",
   "AllowedHosts": "*",
+
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
