--- a/src/GameHook.Application/GameHook.Application.csproj
+++ b/src/GameHook.Application/GameHook.Application.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CoreCLR-NCalc" Version="2.2.110" />
+    <PackageReference Include="Jint" Version="3.0.0-beta-2052" />
   </ItemGroup>
 
 </Project>
