--- a/src/GameHook.Domain/GameHook.Domain.csproj
+++ b/src/GameHook.Domain/GameHook.Domain.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+		<PackageReference Include="NCalcSync" Version="3.8.0" />
 		<PackageReference Include="YamlDotNet" Version="11.2.1" />
 	</ItemGroup>
 
