Removed yml support.

--- a/src/GameHook.IntegrationTests/testsettings.json
+++ b/src/GameHook.IntegrationTests/testsettings.json
@@ -12,6 +12,8 @@
 
   "OUTPUT_TRANSFORMED_MAPPER": false,
 
+  "TESTING_MODE": true,
+
   "Urls": "http://localhost:8085",
   "AllowedHosts": "*",
   "Serilog": {
