--- a/src/GameHook.IntegrationTests/testsettings.json
+++ b/src/GameHook.IntegrationTests/testsettings.json
@@ -3,7 +3,7 @@
   "DRIVER_LISTEN_PORT": "55355",
   "DRIVER_TIMEOUT_COUNTER": 10,
 
-  "ALTERNATIVE_MAPPER_DIRECTORY": "C:\\Users\\Owner\\Desktop\\Repos\\gamehook-io\\mappers",
+  "ALTERNATIVE_MAPPER_DIRECTORY": "C:\\Users\\Owner\\Desktop\\Repos\\gamehook-io\\mappers\\dist",
 
   "OUTPUT_ALL_PROPERTIES_TO_FILESYSTEM": false,
 
