--- a/src/GameHook.Domain/GameHook.Domain.csproj
+++ b/src/GameHook.Domain/GameHook.Domain.csproj
@@ -8,11 +8,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CoreCLR-NCalc" Version="3.0.119" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-		<PackageReference Include="NCalcSync" Version="3.10.0" />
 	</ItemGroup>
 
 </Project>
