--- a/src/GameHook.WebAPI/appsettings.json
+++ b/src/GameHook.WebAPI/appsettings.json
@@ -11,7 +11,7 @@
   "CHECK_FOR_MAPPER_UPDATES_MINUTES": 1,
   "ALTERNATIVE_MAPPER_DIRECTORY": null,
 
-  "TESTING_MODE": false,
+  "LOG_HTTP_TRAFFIC": true,
 
   "Urls": "http://localhost:8085",
   "AllowedHosts": "*",
