--- a/src/GameHook.IntegrationTests/GameHook.IntegrationTests.csproj
+++ b/src/GameHook.IntegrationTests/GameHook.IntegrationTests.csproj
@@ -36,6 +36,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
+		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
