--- a/src/GameHook.WebAPI/appsettings.json
+++ b/src/GameHook.WebAPI/appsettings.json
@@ -1,15 +1,14 @@
 {
-  "DRIVER_LISTEN_IP_ADDRESS": "127.0.0.1",
-  "DRIVER_LISTEN_PORT": "55355",
-  "DRIVER_TIMEOUT_COUNTER": 10,
+  "RETROARCH_LISTEN_IP_ADDRESS": "127.0.0.1",
+  "RETROARCH_LISTEN_PORT": 55355,
+  "RETROARCH_TIMEOUT_COUNTER": 10,
 
   "SHOW_READ_LOOP_STATISTICS": false,
 
-  "OUTPUT_ALL_PROPERTIES_TO_FILESYSTEM": false,
-
   "AUTOMATIC_MAPPER_UPDATES": true,
-  "CHECK_FOR_MAPPER_UPDATES_MINUTES": 1,
-  "ALTERNATIVE_MAPPER_DIRECTORY": null,
+  "MAPPER_VERSION": "latest",
+
+  "MAPPER_DIRECTORY": null,
 
   "LOG_HTTP_TRAFFIC": true,
 
