Major Refactor. Moved things in between domain layer and application layer. Created new infrastructure layer.

--- a/src/GameHook.WebAPI/GameHook.WebAPI.csproj
+++ b/src/GameHook.WebAPI/GameHook.WebAPI.csproj
@@ -49,6 +49,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\GameHook.Application\GameHook.Application.csproj" />
 		<ProjectReference Include="..\GameHook.Domain\GameHook.Domain.csproj" />
+		<ProjectReference Include="..\GameHook.Infrastructure\GameHook.Infrastructure.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
