Added MapperReleaseVersion to Mapper metadata. Added SERILOG_LOG_FILE_PATH to Serilog File output.

--- a/src/GameHook.WebAPI/appsettings.json
+++ b/src/GameHook.WebAPI/appsettings.json
@@ -36,6 +36,7 @@
       {
         "Name": "File",
         "Args": {
+          "path": "%SERILOG_LOG_FILE_PATH%",
           "fileSizeLimitBytes": 16000000,
           "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}"
         }
