--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,14 +10,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        kind: ['linux', 'windows']
+        kind: ['windows', 'linux', 'macos']
         include:
-          - kind: linux
-            os: ['ubuntu-latest']
-            target: linux-x64
           - kind: windows
             os: ['windows-latest']
             target: win-x64
+          - kind: linux
+            os: ['ubuntu-latest']
+            target: linux-x64
+          - kind: macos
+            os: ['macos-latest']
+            target: macos-x64
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
