--- a/src/GameHook.Application/GameHook.Application.csproj
+++ b/src/GameHook.Application/GameHook.Application.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jint" Version="3.0.0-beta-2057" />
+    <PackageReference Include="Jint" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
