--- a/src/GameHook.IntegrationTests/GameHook.IntegrationTests.csproj
+++ b/src/GameHook.IntegrationTests/GameHook.IntegrationTests.csproj
@@ -4,6 +4,9 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
+
+		<!-- TODO: Remove this at a future date. https://github.com/RicoSuter/NSwag/issues/4633 -->
+		<NSwagGenerateExceptionClasses>true</NSwagGenerateExceptionClasses>
 	</PropertyGroup>
 
 	<ItemGroup>
