--- a/src/GameHook.IntegrationTests/testsettings.json
+++ b/src/GameHook.IntegrationTests/testsettings.json
@@ -1,32 +1,34 @@
 ﻿{
-    "RETROARCH_LISTEN_IP_ADDRESS": "127.0.0.1",
-    "RETROARCH_LISTEN_PORT": "55355",
-    "RETROARCH_READ_PACKET_TIMEOUT_MS": 75,
-    "RETROARCH_TIMEOUT_COUNTER": 5,
-    "RETROARCH_DELAY_MS_BETWEEN_READS": 5,
-    "BIZHAWK_DELAY_MS_BETWEEN_READS": 5,
+  "RETROARCH_LISTEN_IP_ADDRESS": "127.0.0.1",
+  "RETROARCH_LISTEN_PORT": "55355",
+  "RETROARCH_READ_PACKET_TIMEOUT_MS": 75,
+  "RETROARCH_TIMEOUT_COUNTER": 5,
+  "RETROARCH_DELAY_MS_BETWEEN_READS": 5,
+  "BIZHAWK_DELAY_MS_BETWEEN_READS": 5,
 
-    "SHOW_READ_LOOP_STATISTICS": false,
+  "MAPPER_DIRECTORY": "C:\\Users\\Owner\\source\\repos\\gamehook-io\\mappers\\dist",
 
-    "AUTOMATIC_MAPPER_UPDATES": false,
-    "MAPPER_VERSION": "latest",
+  "SHOW_READ_LOOP_STATISTICS": false,
 
-    "LOG_HTTP_TRAFFIC": false,
+  "AUTOMATIC_MAPPER_UPDATES": false,
+  "MAPPER_VERSION": "latest",
 
-    "Urls": "http://localhost:8085",
-    "AllowedHosts": "*",
+  "LOG_HTTP_TRAFFIC": false,
 
-    "Serilog": {
-        "Using": [ "Serilog.Sinks.Debug" ],
-        "MinimumLevel": "Debug",
-        "WriteTo": [
-            {
-                "Name": "Debug",
-                "Args": {
-                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}"
-                }
-            }
-        ],
-        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
-    }
+  "Urls": "http://localhost:8085",
+  "AllowedHosts": "*",
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Debug" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Debug",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  }
 }
