--- a/src/GameHook.WebAPI/appsettings.json
+++ b/src/GameHook.WebAPI/appsettings.json
@@ -8,10 +8,8 @@
 
   "SHOW_READ_LOOP_STATISTICS": false,
 
-  "AUTOMATIC_MAPPER_UPDATES": true,
-  "MAPPER_VERSION": "latest",
-
   "MAPPER_DIRECTORY": null,
+  "MAPPER_VERSION": null,
 
   "LOG_HTTP_TRAFFIC": true,
 
