--- a/src/GameHook.Infrastructure/GameHook.Infrastructure.csproj
+++ b/src/GameHook.Infrastructure/GameHook.Infrastructure.csproj
@@ -7,6 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\GameHook.Domain\GameHook.Domain.csproj" />
 	</ItemGroup>
 
