--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,6 +11,15 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date +'%Y.%m.%d.%H%M%S')"
 
+      - name: Define Release Name
+        id: define_release_name
+        run: |
+          commithash=$(git describe --long --always --dirty --exclude=* --abbrev=8)
+          tag=$(git describe --tags --abbrev=0)
+          release_name="GameHook-${{ matrix.target }}-$tag"
+          echo "::set-output name=release_name::$release_name"
+          echo "Release name: $release_name"
+
       - name: Get latest commit hash of @gamehook-io/mappers
         id: get-latest-commit
         run: |
