--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -120,10 +120,10 @@ jobs:
             Content-Type: "application/zip"
           args: |
             - name: "GameHook-${{ matrix.target }}-$tag.zip"
-              path: "./${{ release_name }}.zip"
+              path: "./${{ steps.build_and_upload.outputs.release_name }}.zip"
 
             - name: "GameHook-${{ matrix.target }}-$tag.tar.gz"
-              path: "./${{ release_name }}.tar.gz"
+              path: "./${{ steps.build_and_upload.outputs.release_name }}.tar.gz"
 
             - name: "GameHook.exe"
               path: "./deploy/GameHook.exe"
