--- a/.github/workflows/upload-assets.yml
+++ b/.github/workflows/upload-assets.yml
@@ -1,50 +1,12 @@
-name: Create Release
+name: Build and Upload Assets
 
 on:
-  workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
-  create-release:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get Current Date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y.%m.%d.%H%M%S')"
-
-      - name: Define Release Name
-        id: define_release_name
-        run: |
-          commithash=$(git describe --long --always --dirty --exclude=* --abbrev=8)
-          tag=$(git describe --tags --abbrev=0)
-          release_name="GameHook-${{ matrix.target }}-$tag"
-          echo "::set-output name=release_name::$release_name"
-          echo "Release name: $release_name"
-
-      - name: Get latest commit hash of @gamehook-io/mappers
-        id: get-latest-commit
-        run: |
-          LATEST_COMMIT=$(curl -s https://api.github.com/repos/gamehook-io/mappers/commits/main | jq -r '.sha')
-          echo "Latest commit hash of mappers repository is $LATEST_COMMIT"
-          echo "::set-output name=mapper_commit_hash::$LATEST_COMMIT"
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.date.outputs.date }}
-          release_name: Release ${{ steps.date.outputs.date }}
-          draft: false
-          prerelease: true
-
-      - name: Set Release ID
-        id: get_release_id
-        run: echo "::set-output name=release_id::${{ steps.create_release.outputs.id }}"
-  
-  upload-binaries:
-    name: Build and Release
-    needs: create-release
+  build-and-upload:
+    name: Build and Upload Assets
     strategy:
       fail-fast: false
       matrix:
@@ -64,17 +26,27 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
+      - name: Download MAPPER_COMMIT.txt from the triggered GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Construct the download URL from the release event data
+          MAPPER_COMMIT_URL=$(echo ${{ github.event.release.assets }} | jq -r '.[] | select(.name == "MAPPER_COMMIT.txt").browser_download_url')
+          
+          # Use curl to download the MAPPER_COMMIT.txt file
+          curl -L -o MAPPER_COMMIT.txt -H "Authorization: token $GITHUB_TOKEN" $MAPPER_COMMIT_URL
+
       - name: Update MAPPER_VERSION in appsettings.json
         run: |
-          jq --arg hash "${{ needs.create-release.outputs.mapper_commit_hash }}" '.MAPPER_VERSION = $hash' src/GameHook.WebAPI/appsettings.json > temp.json
-          mv temp.json src/GameHook.WebAPI/appsettings.json
-
+          MAPPER_COMMIT=$(cat MAPPER_COMMIT.txt)
+          jq --arg MAPPER_COMMIT "$MAPPER_COMMIT" '.MAPPER_VERSION = $MAPPER_COMMIT' ./src/GameHook.WebAPI/appsettings.json > ./src/GameHook.WebAPI/appsettings.json.tmp && mv ./src/GameHook.WebAPI/appsettings.json.tmp ./src/GameHook.WebAPI/appsettings.json
+      
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1.7.2
         with:
           dotnet-version: 8.0.x
 
-      - name: Build and Upload Packages
+      - name: Build Project
         shell: bash
         run: |
           # Variables
@@ -110,30 +82,21 @@ jobs:
             cd ./deploy/ && tar czvf "./../${release_name}.tar.gz" GameHook && cd -
           fi
 
-      - name: Upload Release Assets
-        uses: octokit/request-action@v2.x
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          route: POST /repos/:owner/:repo/releases/:release_id/assets
-          release_id: ${{ needs.create-release.outputs.release_id }}
-          headers: |
-            Authorization: "token ${{ secrets.GITHUB_TOKEN }}"
-            Content-Type: "application/zip"
-          args: |
-            - name: "GameHook-${{ matrix.target }}-$tag.zip"
-              path: "./${{ steps.build_and_upload.outputs.release_name }}.zip"
-
-            - name: "GameHook-${{ matrix.target }}-$tag.tar.gz"
-              path: "./${{ steps.build_and_upload.outputs.release_name }}.tar.gz"
-
-            - name: "GameHook.exe"
-              path: "./deploy/GameHook.exe"
-
+          files: |
+            ./GameHook-*.zip
+            ./GameHook-*.tar.gz
+            ./deploy/GameHook.exe
+  
   notify:
     name: Notify Users
     runs-on: ubuntu-latest
-    needs: upload-binaries
+    needs:
+      - build-and-upload
     steps:
-      - name: Discord notification
+      - name: Discord Notification
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_APP_UPDATES_WEBHOOK }}
         uses: Ilshidur/action-discord@master
