--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,6 +14,7 @@ jobs:
       run: echo "CURRENT_TIMESTAMP=$(date +'%Y.%m.%d.%H%M%S')" >> $GITHUB_ENV
 
     - name: Create Release
+      id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
