--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -38,17 +38,92 @@ jobs:
             ref: 'heads/main'
           });
 
-          return response.data.sha;
+          core.setOutput('commit_hash', response.data.sha);
 
-    - name: Create MAPPER_REPOSITORY.txt
-      run: echo "${{ steps.get_latest_commit.outputs.result }}" > MAPPER_COMMIT.txt
+  build-and-upload:
+    name: Build and Upload Assets
+    strategy:
+      fail-fast: false
+      matrix:
+        kind: ['windows', 'linux', 'macos']
+        include:
+          - kind: windows
+            os: ['windows-latest']
+            target: win-x64
+          - kind: linux
+            os: ['ubuntu-latest']
+            target: linux-x64
+          - kind: macos
+            os: ['macos-latest']
+            target: osx-x64
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
 
-    - name: Upload MAPPER_COMMIT.txt to Release
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./MAPPER_COMMIT.txt
-        asset_name: MAPPER_COMMIT.txt
-        asset_content_type: text/plain
+      - name: Update MAPPER_VERSION in appsettings.json
+        run: |
+          MAPPER_COMMIT=${{ steps.get_latest_commit.outputs.commit_hash }}
+          jq --arg MAPPER_COMMIT "$MAPPER_COMMIT" '.MAPPER_VERSION = $MAPPER_COMMIT' ./src/GameHook.WebAPI/appsettings.json > ./src/GameHook.WebAPI/appsettings.json.tmp && mv ./src/GameHook.WebAPI/appsettings.json.tmp ./src/GameHook.WebAPI/appsettings.json
+      
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v1.7.2
+        with:
+          dotnet-version: 8.0.x
+
+      - name: Build Project
+        shell: bash
+        run: |
+          # Variables
+          commithash=$(git describe --long --always --dirty --exclude=* --abbrev=8)
+          tag=$(git describe --tags --abbrev=0)
+          release_name="GameHook-${{ matrix.target }}-$tag"
+          echo "commithash is $commithash"
+          echo "tag is $tag"
+          echo "release_name is $release_name"
+
+          echo "Building GameHook.WebAPI"
+          echo "dotnet publish src/GameHook.WebAPI/GameHook.WebAPI.csproj -r ${{ matrix.target }} -c Release -o deploy /property:PublishSingleFile=true /property:Version=$tag /property:InformationalVersion=$tag+$commithash"
+          dotnet publish src/GameHook.WebAPI/GameHook.WebAPI.csproj -r ${{ matrix.target }} -c Release -o deploy /property:PublishSingleFile=true /property:Version=$tag /property:InformationalVersion=$tag+$commithash
+
+          if [ "${{ matrix.kind }}" == "windows" ]; then
+            echo "Building GameHook.WPF"
+
+            echo "dotnet publish src/GameHook.WPF/GameHook.WPF.csproj -r ${{ matrix.target }} -c Release -o deploy /property:PublishSingleFile=true /property:Version=$tag /property:InformationalVersion=$tag+$commithash"
+            dotnet publish src/GameHook.WPF/GameHook.WPF.csproj -r ${{ matrix.target }} -c Release -o deploy /property:PublishSingleFile=true /property:Version=$tag /property:InformationalVersion=$tag+$commithash
+          fi
+
+          # Rename binaries.
+          if [ "${{ matrix.kind }}" == "windows" ]; then
+            cp ./deploy/GameHook.WPF.exe ./deploy/GameHook.exe
+            cp ./deploy/GameHook.WebAPI.exe ./deploy/GameHook.Console.exe
+
+            7z a -tzip "${release_name}.zip" "./deploy/GameHook.exe"
+            7z a -tzip "${release_name}-console-only.zip" "./deploy/GameHook.Console.exe"
+          else
+            chmod +x ./deploy/GameHook.WebAPI
+            cp ./deploy/GameHook.WebAPI ./deploy/GameHook
+
+            cd ./deploy/ && tar czvf "./../${release_name}.tar.gz" GameHook && cd -
+          fi
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            ./GameHook-*.zip
+            ./GameHook-*.tar.gz
+            ./deploy/GameHook.exe
+  
+  notify:
+    name: Notify Users
+    runs-on: ubuntu-latest
+    needs:
+      - build-and-upload
+    steps:
+      - name: Discord Notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_APP_UPDATES_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'A new version of GameHook has been released. Version ${{ github.event.release.tag_name }} is now available. <https://github.com/gamehook-io/gamehook/releases/tag/${{ github.event.release.tag_name }}>'
